--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">My Projects</h2>
-            <p>These are some project I made and it's actually about design and editing photo </p>
+            <p>These are some projects I made and they're actually about design and editing photo </p>
           </div>
         </div>
     		<div class="row">
