--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Ady Aruan</span></h1>
-			            <h2 class="mb-4">UI/UX Enthusiast</h2>
+			            <h2 class="mb-4">IT Enthusiast</h2>
 		            </div>
 		          </div>
 	        	</div>
@@ -74,7 +74,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>UI/UX Enthusiast</span> based in Laguboti</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>IT Enthusiast</span> based in Laguboti</h1>
 			           
 		            </div>
 		          </div>
@@ -99,7 +99,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I am a final year student In Del Institute of Technology. Majoring in Diploma 3 Computer Technology. I am interesting in UI/UX Design (Mobile or Website), Graphic Design & Photo or Video Editing</p>
+		            <p>I am a final year student In Del Institute of Technology. Majoring in Diploma 3 Computer Technology. I am interesting in Website Development, DevOps, and Design</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Ady Daniel Gilbert Aruan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>March 27th, 2000</span></li>
@@ -140,9 +140,9 @@
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">September 2019</span>
-    					<h2>Inauguration, Graduation & Anniversary</h2>
+    					<h2>Virtual IoT Smart Device Simulator using Node-RED</h2>
     					<span class="position">Del Institute of Technology</span>
-    					<p class="mt-4">Became a member of event divsion in Inauguration, Graduation & Anniversary in Del Institute of Technology.</p>
+    					<p class="mt-4">This is my last project as a final-year student in my College. We done virtual sensor for Node-Red as plugin that represent real data as real sensor</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">June 2019 - August 2019</span>
@@ -152,9 +152,9 @@
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">May 2020</span>
-    					<h2>BNI-MBanking Study Case</h2>
+    					<h2>Automatic Parking System (IoT Project)</h2>
     					<span class="position">Del Institute of Technology</span>
-    					<p class="mt-4">Done Research & Design about BNI Mobile Banking Application. I am Researching about User Experience in this mobile application and redesign it according to what I have been researched to.</p>
+    					<p class="mt-4">This is my last project as a sophomore in my college. My and my friends done this project to create automatic Parking System using Blynk, ESP32 and Arduino </p>
     				</div>
     			</div>
 
@@ -215,7 +215,7 @@
 								<i class="flaticon-flasks"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Photo Editing</h3>
+								<h3 class="mb-5">IoT</h3>
 							</div>
 						</a>
 					</div>
@@ -236,7 +236,7 @@
 								<i class="flaticon-analysis"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Photography</h3>
+								<h3 class="mb-5">DevOps</h3>
 							</div>
 						</a>
 					</div>
@@ -246,7 +246,7 @@
 								<i class="flaticon-flasks"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Video Editing</h3>
+								<h3 class="mb-5">Web Development</h3>
 							</div>
 						</a>
 					</div>
@@ -256,7 +256,7 @@
 								<i class="flaticon-ideas"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Mobile App Design</h3>
+								<h3 class="mb-5">Design</h3>
 							</div>
 						</a>
 					</div>
@@ -310,11 +310,11 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Balsamiq Mockup</h3>
+							<h3>Git</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-							    <span>85%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+							    <span>75%</span>
 							  	</div>
 							</div>
 						</div>
@@ -332,7 +332,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Adobe Premiere Pro</h3>
+							<h3>DevOps</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -365,7 +365,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Wireframing</h3>
+							<h3>IoT</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -376,7 +376,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Prototyping</h3>
+							<h3>Network</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
